--- a/_sticky_bar.scss
+++ b/_sticky_bar.scss
@@ -4,7 +4,7 @@
 
 .side .md h4:nth-of-type(1) {
     position: absolute;
-    z-index: 200;
+    z-index: 3;
     background: $dark-blue;
     top: 191px; 
     left: 5px;
